[package]
name = "padwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = [ "json" ] }
tokio = {version = "1", features = [ "full" ] }
anyhow = "1"
chrono = { version = "0.4", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }
humantime-serde = "1"
toml = "0.7"
pulldown-cmark = { version = "0.9" }
structopt = "0.3"
matrix-sdk = { version = "0.6", features = [ "markdown" ] }
humantime = "2"
sha2 = "0.10"
similar = "2.2"
url = "2.4"
